-o raw is the same as -b raw

--- a/util/luasporth/Makefile
+++ b/util/luasporth/Makefile
@@ -5,7 +5,7 @@ ifdef MASTER_MAKEFILE
 SPORTHPATH=util/luasporth/
 luasporth: $(SPORTHPATH)luasporth
 endif
-OBJ += $(SPORTHPATH)luasporth
+BIN += $(SPORTHPATH)luasporth
 
 $(SPORTHPATH)luasporth: $(SPORTHPATH)luasporth.c
 	gcc $< -ldl -lsporth -lsoundpipe -lsndfile -llua -lm -o $@
