--- a/chugin/makefile.linux
+++ b/chugin/makefile.linux
@@ -1,8 +1,6 @@
 CHUGIN_PATH=/usr/lib/chuck
 
-FLAGS=-D__LINUX_ALSA__ -D__PLATFORM_LINUX__ -I$(CK_SRC_PATH) -fPIC -DNO_LIBSNDFILE
-LDFLAGS=-shared -lstdc++ -fPIC
+FLAGS=-D__LINUX_ALSA__ -D__PLATFORM_LINUX__ -I$(CK_SRC_PATH) -fPIC -lsoundpipe
+LDFLAGS=-shared -lstdc++ -fPIC -lsoundpipe -lsporth
 LD=gcc 
 CXX=g++
-
-C_OBJECTS += ../soundpipe.o
