--- a/chorth/makefile.linux
+++ b/chorth/makefile.linux
@@ -4,3 +4,8 @@ FLAGS=-D__LINUX_ALSA__ -D__PLATFORM_LINUX__ -I$(CK_SRC_PATH) -fPIC -lsoundpipe_d
 LDFLAGS=-shared -lstdc++ -fPIC -lsoundpipe_dyn -lsporth_dyn 
 LD=gcc 
 CXX=g++
+
+ifdef BUILD_KONA
+LDFLAGS += -lkona_dyn -lpthread -ldl -lm
+FLAGS += -lkona_dyn 
+endif
