added basic note events

--- a/ugens/polysporth/Makefile
+++ b/ugens/polysporth/Makefile
@@ -1,2 +1,2 @@
 CFLAGS += -I ugens/polysporth/
-OBJ += ugens/polysporth/polysporth.o
+OBJ += ugens/polysporth/polysporth.o ugens/polysporth/dvector.o
