sporth chugin on linux just got a LOT easier to build...

--- a/chorth/makefile
+++ b/chorth/makefile
@@ -91,7 +91,7 @@ all: $(CHUG)
 
 $(CHUG): $(C_OBJECTS) $(CXX_OBJECTS) 
 ifeq ($(CK_CHUGIN_STATIC),0)
-	$(LD) $(LDFLAGS) -o $@ $^ 
+	$(LD) -o $@ $^ $(LDFLAGS)
 else
 	ar rv $@ $^
 	ranlib $@
