ld->gcc (again) in chorth

--- a/chorth/makefile.linux
+++ b/chorth/makefile.linux
@@ -2,7 +2,7 @@ CHUGIN_PATH=/usr/local/lib/chuck
 
 FLAGS=-D__LINUX_ALSA__ -D__PLATFORM_LINUX__ -I$(CK_SRC_PATH) -fPIC 
 LDFLAGS += -lsporth -lsoundpipe -lstdc++ -fPIC -lsndfile -lm -shared
-LD=ld
+LD=gcc
 CXX=g++
 
 
