--- a/chorth/makefile.osx
+++ b/chorth/makefile.osx
@@ -2,12 +2,10 @@
 #ARCHS?=x86_64
 #ARCHOPTS=$(addprefix -arch ,$(ARCHS))
 
-SP_PATH=~/pbatch/soundpipe
-SPORTH_O=`find ../ -name "*.o" | grep -v chorth`
-SP_O=`find $(SP_PATH) -name "*.o" `
-
-FLAGS+=-mmacosx-version-min=10.5 -D__MACOSX_CORE__ -I$(CK_SRC_PATH) $(ARCHOPTS) -fPIC
-LDFLAGS+=-mmacosx-version-min=10.5 -shared -lstdc++ $(ARCHOPTS) $(SPORTH_O) $(SP_O) -L/usr/local/lib -lsndfile
+CXXFLAGS += -I/usr/local/include
+FLAGS+=-mmacosx-version-min=10.5 -D__MACOSX_CORE__ -I$(CK_SRC_PATH) $(ARCHOPTS) -fPIC -I/usr/local/include
+LDFLAGS+=-mmacosx-version-min=10.5 -shared -lstdc++ $(ARCHOPTS) $(SPORTH_O) $(SP_O) -L/usr/local/lib 
+LDFLAGS+=-lsporth -lsoundpipe -lstdc++ -fPIC -lsndfile -lm -shared
 
 LD=clang++
 CXX=clang++
