pdsend: initial implementation

--- a/util/pd/Makefile
+++ b/util/pd/Makefile
@@ -30,7 +30,7 @@ pd_linux: sporth~.pd_linux
 .SUFFIXES: .pd_linux
 
 LINUXCFLAGS = -DPD -O2 -funroll-loops -fomit-frame-pointer \
-    -Wall -Wno-unused -Wno-parentheses -Wno-switch -fPIC
+    -Wall -Wno-unused -Wno-parentheses -Wno-switch -fPIC -g
 
 LINUXINCLUDE =  -I../../src -I $(SP_PATH)/h
 
